# life-with-rust

./: Cargo.toml  README.md
collections/src/: main.rs
control_flow/src/: main.rs
enums/src/: main.rs
error_handling/src/: main.rs
functional_programming/src/: main.rs
functions/src/: main.rs
guessing_game/src/: main.rs
hello-cargo/src/: main.rs
hello-world/: main
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
reference/src/: main.rs
rustlings/exercises/04_primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/quizzes/: quiz1.rs
slice/src/: main.rs
structs/src/: main.rs
variables/src/: main.rs
