[workspace]
resolver = "3"

members = [
    "variables",
    "collections",
    "control_flow",
    "enums",
    "functions",
    "guessing_game",
    "hello-cargo",
    "ownership",
    "packages_crates",
    "reference",
    "slice",
    "structs",
    "variables", "rustlings", "error_handling", "minigrep",
]

[profile.dev]



